--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                         <label for="sellPrice">Sell Price (Per Share)</label>
                         <div class="input-wrapper">
                             <span class="currency-symbol">₹</span>
-                            <input type="number" id="sellPrice" placeholder="0.00" step="0.01">
+                            <input type="number" id="sellPrice" class="calc-input" placeholder="0.00" step="0.01">
                         </div>
                     </div>
 
@@ -68,7 +68,7 @@
                         <label for="sellQuantity">Sell Quantity</label>
                         <div class="input-wrapper">
                             <span class="icon-qty">#</span>
-                            <input type="number" id="sellQuantity" placeholder="0" step="1">
+                            <input type="number" id="sellQuantity" class="calc-input" placeholder="0" step="1">
                         </div>
                         <div class="helper-text">Defaults to Total Buy Qty</div>
                     </div>
