stam duty logic fixed

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                         <span id="buyStt">₹0.00</span>
                     </div>
                     <div class="detail-row">
-                        <span>Stamp Duty</span>
+                        <span>Stamp Duty <div class="tooltip-container">ⓘ<span class="tooltip-text">Rounded to the nearest rupee as per exchange norms</span></div></span>
                         <span id="buyStamp">₹0.00</span>
                     </div>
                     <div class="divider"></div>
