--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -36,13 +36,37 @@
 
     <!-- Main Dashboard -->
     <div class="container" style="margin-top: 100px;">
-        <header style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 30px;">
+
+        <!-- Header & Add Button -->
+        <header class="dashboard-header">
             <div>
-                <h1>My Stock Portfolio</h1>
-                <p id="portfolioSummary">Loading...</p>
+                <h1>My Portfolio</h1>
+                <p class="subtitle">Track your performance and manage entries</p>
             </div>
-            <button class="primary-btn" id="addStockBtn">+ Add Stock</button>
+            <button class="primary-btn add-btn" id="addStockBtn">
+                <span class="plus-icon">+</span> Add New Stock
+            </button>
         </header>
+
+        <!-- Stats Grid (Summary) -->
+        <section class="stats-grid dashboard-stats">
+            <div class="stat-card">
+                <div class="stat-label">Total Invested</div>
+                <div class="stat-number" id="totalInvestedDisplay">₹0.00</div>
+            </div>
+            <div class="stat-card">
+                <div class="stat-label">Current Value</div>
+                <div class="stat-number" id="currentValueDisplay">₹0.00</div>
+            </div>
+            <div class="stat-card">
+                <div class="stat-label">Total P&L</div>
+                <div class="stat-number" id="totalPnLDisplay">₹0.00</div>
+            </div>
+            <div class="stat-card">
+                <div class="stat-label">Active Stocks</div>
+                <div class="stat-number" id="activeStocksDisplay">0</div>
+            </div>
+        </section>
 
         <!-- Stock Table -->
         <div class="table-container glass-panel">
@@ -51,21 +75,19 @@
                     <tr>
                         <th>Stock Name</th>
                         <th>Buy Price</th>
-                        <th>Buy Qty</th>
+                        <th>Qty</th>
                         <th>Buy Charges</th>
-                        <th>Total Buy Cost</th>
+                        <th>Total Cost</th>
                         <th>Breakeven</th>
                         <th>Sell Price</th>
                         <th>Sell Qty</th>
-                        <th>Sell Charges</th>
-                        <th>Remaining</th>
                         <th>P&L</th>
                         <th>Actions</th>
                     </tr>
                 </thead>
                 <tbody id="stockTableBody">
                     <tr>
-                        <td colspan="12" style="text-align: center; padding: 40px;">
+                        <td colspan="10" class="empty-state">
                             Loading your stocks...
                         </td>
                     </tr>
@@ -76,30 +98,33 @@
 
     <!-- Add/Edit Stock Modal -->
     <div id="stockModal" class="modal" style="display: none;">
-        <div class="modal-content glass-panel" style="max-width: 600px;">
+        <div class="modal-content glass-panel">
             <span class="close-modal">&times;</span>
             <h2 id="modalTitle">Add Stock Entry</h2>
 
             <form id="stockForm">
                 <div class="input-group">
-                    <label for="stockName">Stock Name *</label>
-                    <input type="text" id="stockName" class="calc-input" placeholder="e.g., RELIANCE" required>
+                    <label for="stockName">Stock Name</label>
+                    <input type="text" id="stockName" class="calc-input" placeholder="e.g., TATASTEEL" required
+                        autocomplete="off">
                 </div>
 
                 <div class="form-row">
                     <div class="input-group">
-                        <label for="buyPrice">Buy Price *</label>
+                        <label for="buyPrice">Buy Price</label>
                         <input type="number" id="buyPrice" class="calc-input" placeholder="0.00" step="0.01" required>
                     </div>
                     <div class="input-group">
-                        <label for="buyQuantity">Buy Quantity *</label>
+                        <label for="buyQuantity">Buy Quantity</label>
                         <input type="number" id="buyQuantity" class="calc-input" placeholder="0" required>
                     </div>
                 </div>
 
+                <div class="separating-line"></div>
+
                 <div class="form-row">
                     <div class="input-group">
-                        <label for="sellPrice">Sell Price</label>
+                        <label for="sellPrice">Sell Price (Optional)</label>
                         <input type="number" id="sellPrice" class="calc-input" placeholder="0.00" step="0.01">
                     </div>
                     <div class="input-group">
@@ -110,7 +135,7 @@
 
                 <div class="modal-actions">
                     <button type="button" class="secondary-btn" id="cancelBtn">Cancel</button>
-                    <button type="submit" class="primary-btn" id="saveBtn">Save</button>
+                    <button type="submit" class="primary-btn" id="saveBtn">Save Entry</button>
                 </div>
             </form>
         </div>
