--- a/public/index.html
+++ b/public/index.html
@@ -242,6 +242,10 @@
                             <span>Total Buy Charges</span>
                             <span id="buyTotalCharges" class="negative-value">₹0.00</span>
                         </div>
+                        <div class="detail-row" style="color: var(--text-primary); margin-top: 10px;">
+                            <span>Average Cost Per Share</span>
+                            <span id="buyAvgCostPerShare">₹0.00</span>
+                        </div>
                         <div class="detail-row final-row">
                             <span>Total Paid</span>
                             <span id="buyTotalPayable">₹0.00</span>
