Sales Charges row added at Dashboard

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -81,13 +81,14 @@
                         <th>Breakeven</th>
                         <th>Sell Price</th>
                         <th>Sell Qty</th>
+                        <th>Sales Charge</th>
                         <th>P&L</th>
                         <th>Actions</th>
                     </tr>
                 </thead>
                 <tbody id="stockTableBody">
                     <tr>
-                        <td colspan="10" class="empty-state">
+                        <td colspan="11" class="empty-state">
                             Loading your stocks...
                         </td>
                     </tr>
