--- a/public/index.html
+++ b/public/index.html
@@ -369,6 +369,17 @@
             <!-- Signup Form -->
             <div id="signupForm" class="auth-form" style="display: none;">
                 <h2>Create Account</h2>
+
+                <!-- Email Verification Notice -->
+                <div class="auth-info-box">
+                    <span class="info-icon-box">📬</span>
+                    <div class="info-text">
+                        <strong>Check your spam folder!</strong>
+                        <p>Verification emails often land in spam. Please check there if you don't see it in your inbox.
+                        </p>
+                    </div>
+                </div>
+
                 <div class="input-group">
                     <label for="signupEmail">Email Address</label>
                     <div class="auth-input-wrapper">
