--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="css/dashboard.css">
     <link rel="stylesheet" href="css/expandable-rows.css">
+    <link rel="stylesheet" href="css/stock-modal.css">
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 </head>
 
@@ -109,23 +110,36 @@
             <form id="stockForm">
                 <div class="input-group">
                     <label for="stockName">Stock Name</label>
-                    <input type="text" id="stockName" class="calc-input" placeholder="e.g., TATASTEEL" required
-                        autocomplete="off">
+                    <div class="stock-input-wrapper">
+                        <input type="text" id="stockName" class="calc-input" placeholder="e.g., TATASTEEL" required
+                            autocomplete="off">
+                        <span class="stock-input-icon">📊</span>
+                    </div>
                 </div>
 
                 <div class="input-group">
                     <label for="purchaseDate">Purchase Date</label>
-                    <input type="date" id="purchaseDate" class="calc-input" required>
+                    <div class="stock-input-wrapper">
+                        <input type="date" id="purchaseDate" class="calc-input" required>
+                        <span class="stock-input-icon">📅</span>
+                    </div>
                 </div>
 
                 <div class="form-row">
                     <div class="input-group">
                         <label for="buyPrice">Buy Price</label>
-                        <input type="number" id="buyPrice" class="calc-input" placeholder="0.00" step="0.01" required>
+                        <div class="stock-input-wrapper">
+                            <input type="number" id="buyPrice" class="calc-input" placeholder="0.00" step="0.01"
+                                required>
+                            <span class="stock-input-icon">₹</span>
+                        </div>
                     </div>
                     <div class="input-group">
                         <label for="buyQuantity">Buy Quantity</label>
-                        <input type="number" id="buyQuantity" class="calc-input" placeholder="0" required>
+                        <div class="stock-input-wrapper">
+                            <input type="number" id="buyQuantity" class="calc-input" placeholder="0" required>
+                            <span class="stock-input-icon">📦</span>
+                        </div>
                     </div>
                 </div>
 
@@ -134,11 +148,17 @@
                 <div class="form-row">
                     <div class="input-group">
                         <label for="sellPrice">Sell Price (Optional)</label>
-                        <input type="number" id="sellPrice" class="calc-input" placeholder="0.00" step="0.01">
+                        <div class="stock-input-wrapper">
+                            <input type="number" id="sellPrice" class="calc-input" placeholder="0.00" step="0.01">
+                            <span class="stock-input-icon">₹</span>
+                        </div>
                     </div>
                     <div class="input-group">
                         <label for="sellQuantity">Sell Quantity</label>
-                        <input type="number" id="sellQuantity" class="calc-input" placeholder="0">
+                        <div class="stock-input-wrapper">
+                            <input type="number" id="sellQuantity" class="calc-input" placeholder="0">
+                            <span class="stock-input-icon">📦</span>
+                        </div>
                     </div>
                 </div>
 
