Ai chatbot added

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="css/dashboard.css">
     <link rel="stylesheet" href="css/expandable-rows.css">
     <link rel="stylesheet" href="css/stock-modal.css">
+    <link rel="stylesheet" href="css/chatbot.css">
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 </head>
 
@@ -302,6 +303,10 @@
     <script src="js/stock-grouping.js"></script>
     <script src="js/expandable-rows.js"></script>
     <script src="js/dashboard.js"></script>
+
+    <!-- AI Chatbot -->
+    <script src="js/together-ai-config.js"></script>
+    <script src="js/chatbot.js"></script>
 </body>
 
 </html>
