--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="css/landing.css">
     <link rel="stylesheet" href="css/auth-modal.css">
+    <link rel="stylesheet" href="css/chatbot.css">
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 </head>
 
@@ -412,6 +413,11 @@
     <script src="js/calculator.js"></script>
     <script src="js/supabase-config.js"></script>
     <script src="js/auth.js"></script>
+
+    <!-- AI Chatbot -->
+    <script src="js/together-ai-config.js"></script>
+    <script src="js/chatbot.js"></script>
+
     <script>
         // Check if already logged in
         window.auth.redirectIfAuthenticated();
