--- a/public/index.html
+++ b/public/index.html
@@ -415,7 +415,7 @@
     <script src="js/auth.js"></script>
 
     <!-- AI Chatbot -->
-    <script src="js/together-ai-config.js"></script>
+    <script src="js/google-ai-config.js"></script>
     <script src="js/chatbot.js"></script>
 
     <script>
