--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -305,7 +305,7 @@
     <script src="js/dashboard.js"></script>
 
     <!-- AI Chatbot -->
-    <script src="js/google-ai-config.js"></script>
+    <script src="js/deepseek-config.js"></script>
     <script src="js/chatbot.js"></script>
 </body>
 
